--- a/react-debugging.html
+++ b/react-debugging.html
@@ -6,6 +6,10 @@
 
 <!-- HINT: Check the console in the browser developer tools for errors. The lines numbers may not match up with the line numbers in your text editor. -->
 
+<!-- Psuedo Code: -->
+<!-- added page breaks <> </>
+added this. method to handle the onClick. -->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -63,11 +67,12 @@
           // No need to change anything ABOVE this line ^
 
           return(
+          <>
             <h1>Draw a Card</h1>
-            <button onClick={}>
+            <button onClick={this.drawCard}>
               Click to Draw a Card
             </button>
-            <button onClick={shuffle}>
+            <button onClick={this.shuffle}>
               Return Cards and Shuffle Deck
             </button>
             <div style={handStyles}>
@@ -79,6 +84,7 @@
                 )
               })}
             </div>
+            </>
           )
         }
       }
